--- a/public/style.css
+++ b/public/style.css
@@ -17,6 +17,29 @@ code {
 }
 
 /**
+ * Scroller
+ */
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: #888 ;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #90a4ae ;
+}
+
+
+/**
  * Bootstrap Helper
  */
 
