--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,9 @@
 html, body, #root {
-	height: 100%;
+	min-height: 100vh;
 }
 
 body {
+	position: relative;
 	box-sizing: border-box !important;
 	margin: 0;
 	padding: 0;
