--- a/public/style.css
+++ b/public/style.css
@@ -17,6 +17,11 @@ code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
+
+h3, h4, h5 {
+    margin-block-end: .7em;
+}
+
 /**
  * Scroller
  */
