--- a/public/style.css
+++ b/public/style.css
@@ -22,24 +22,29 @@ h3, h4, h5 {
     margin-block-end: .7em;
 }
 
+ul {
+    padding-inline-start: 1.2em;
+    margin-block-start: .5em;
+}
+
 /**
  * Scroller
  */
 
 ::-webkit-scrollbar {
-  width: 8px;
-  height: 8px;
+    width: 8px;
+    height: 8px;
 }
 
 ::-webkit-scrollbar-track {
-  background-color: transparent;
+    background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
-  border-radius: 4px;
-  background-color: #888 ;
+    border-radius: 4px;
+    background-color: #888 ;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #90a4ae ;
+    background-color: #90a4ae ;
 }
